--- a/css/transportes.css
+++ b/css/transportes.css
@@ -1,5 +1,9 @@
 /* font-family: 'Open Sans', sans-serif; */
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: "Open Sans", sans-serif;
   font-size: 1em;
@@ -145,15 +149,13 @@ h2 {
     rgba(158, 157, 157, 0.5),
     rgb(255, 255, 255)
   );
-  box-shadow: -0.5em -0.5em 2em rgba(34, 34, 185, 0.582) inset;
+  box-shadow: inset -0.2em -1em 1em rgba(34, 34, 185, 0.582);
 }
 
 .img-persona {
   border-radius: 50%;
-  border: 1px dotted rgb(26, 211, 224);
-}
-.img-persona:hover {
-  filter: grayscale(80%);
+  border: 2.8px solid rgb(20, 23, 204);
+  filter: grayscale(50%);
 }
 
 .persona .nom-persona,
@@ -199,7 +201,11 @@ h2 {
 .persona:hover {
   filter: drop-shadow(0px 10px 10px rgba(7, 90, 167, 0.424)) invert(10%);
 }
-
+.persona:hover > .img-persona {
+  filter: grayscale(0%);
+  filter: brightness(1.3);
+  filter: contrast(200%);
+}
 .redes1 > a {
   text-decoration: none;
 }
