"adding shadow to icons and grayscale image"

--- a/css/transportes.css
+++ b/css/transportes.css
@@ -155,7 +155,7 @@ h2 {
 .img-persona {
   border-radius: 50%;
   border: 2.8px solid rgb(20, 23, 204);
-  filter: grayscale(50%);
+  filter: grayscale(30%);
 }
 
 .persona .nom-persona,
@@ -225,6 +225,7 @@ h2 {
 
 .fab:hover {
   filter: contrast(300%);
+  box-shadow: -5px 5px 3px rgba(0, 0, 0, 0.397);
 }
 
 /* Fin Nosotros */
