--- a/css/transportes.css
+++ b/css/transportes.css
@@ -156,6 +156,7 @@ h2 {
   border-radius: 50%;
   border: 2.8px solid rgb(20, 23, 204);
   filter: grayscale(30%);
+  filter: blur(0.5px);
 }
 
 .persona .nom-persona,
@@ -203,8 +204,8 @@ h2 {
 }
 .persona:hover > .img-persona {
   filter: grayscale(0%);
-  filter: brightness(1.3);
-  filter: contrast(200%);
+  filter: brightness(1.1);
+  filter: contrast(150%);
 }
 .redes1 > a {
   text-decoration: none;
