--- a/css/transportes.css
+++ b/css/transportes.css
@@ -2,29 +2,41 @@
 
 html {
   scroll-behavior: smooth;
+  /* background-image: url(../img/galeria/bg8.png);
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center; */
+
 }
+
+
 
 body {
   font-family: "Open Sans", sans-serif;
   font-size: 1em;
   line-height: 1.25em;
+  
 }
 
 header {
-  background: rgba(8, 37, 104, 0.842);
+  background: rgb(23, 59, 141);
   padding: 1em 0;
   position: sticky;
   top: 0;
 }
 
 header h1 {
-  color: white;
+  color: rgb(61, 238, 238);
   font-size: 2.5em;
   font-style: italic;
-  font-weight: 100;
+  font-weight: 500;
   display: inline-block;
   position: relative;
-  bottom: 0.7em;
+  bottom: 0.55em;
+}
+
+.c-header{
+  z-index: 3;
 }
 
 nav {
@@ -32,6 +44,7 @@ nav {
   margin-bottom: 2em;
   position: sticky;
   top: 13.6%;
+  z-index: 3;
 }
 
 .nav-list {
@@ -131,6 +144,7 @@ h2 {
 /* Inicio Nosotros */
 .personas {
   width: 99%;
+  height: 38em;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
@@ -148,13 +162,17 @@ h2 {
     rgba(158, 157, 157, 0.5),
     rgb(255, 255, 255)
   );
-  box-shadow: inset -0.2em -1em 1em rgba(34, 34, 185, 0.582);
+  box-shadow: inset -0.2em -2em 1em rgba(9, 9, 93, 0.582);
+  transition: 0.5s;
+  transition-timing-function: ease;
 }
 
 .img-persona {
   border-radius: 50%;
   filter: blur(0.5px);
   filter: grayscale(60%);
+  transition: 0.5s;
+  transition-timing-function: ease;
 }
 
 .persona .nom-persona,
@@ -199,6 +217,7 @@ h2 {
 
 .persona:hover {
   filter: drop-shadow(0px 10px 10px rgba(7, 90, 167, 0.424)) invert(10%);
+  margin-bottom: 2em;
 }
 .persona:hover > .img-persona {
   filter: grayscale(0%);
